examples/cross-cluster-app.yml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: null
  name: cross-cluster-app
objects:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 1
    labels:
      app: phpmysqldemo
    name: phpmysqldemo
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: phpmysqldemo
      deploymentconfig: phpmysqldemo
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: phpmysqldemo
          deploymentconfig: phpmysqldemo
      spec:
        containers:
        - image: docker-registry.default.svc:5000/cicdcc/phpmysqldemo@sha256:c14983ed0c1601c7b53d6ecd5078419f601c8d0d6ffb8c3b710e39930fb9796f
          imagePullPolicy: Always
          name: phpmysqldemo
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - phpmysqldemo
        from:
          kind: ImageStreamTag
          name: phpmysqldemo:latest
          namespace: cicdcc
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: phpmysqldemo
    name: phpmysqldemo
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      app: phpmysqldemo
      deploymentconfig: phpmysqldemo
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: phpmysqldemo
    name: phpmysqldemo
  spec:
    host: phpmysqldemo-cicdcc.apps.example.com
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: phpmysqldemo
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2018-04-19T20:47:40Z
        status: "True"
        type: Admitted
      host: phpmysqldemo-cicdcc.apps.example.com
      routerName: router
      wildcardPolicy: None
