examples/simpledemo-template.yml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: null
  name: simpledemo-app
objects:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 1
    labels:
      app: simpledemo
    name: simpledemo
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: simpledemo
      deploymentconfig: simpledemo
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: simpledemo
          deploymentconfig: simpledemo
      spec:
        containers:
        - image: quay.io/rlucente-se-jboss/simpledemo@sha256:43d3ad96c27cbbd738704a9ce6868423468ac390885c09185d34d5a29633fff0
          imagePullPolicy: Always
          name: simpledemo
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - simpledemo
        from:
          kind: ImageStreamTag
          name: simpledemo:latest
          namespace: afcea
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/image.dockerRepositoryCheck: 2018-05-01T20:20:21Z
    creationTimestamp: null
    generation: 2
    labels:
      app: simpledemo
    name: simpledemo
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: quay.io/rlucente-se-jboss/simpledemo
      from:
        kind: DockerImage
        name: 172.30.1.1:5000/afcea/simpledemo:latest
      generation: 2
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: simpledemo
    name: simpledemo
  spec:
    host: simpledemo-afcea.192.168.99.100.nip.io
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: simpledemo
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2018-05-01T20:20:55Z
        status: "True"
        type: Admitted
      host: simpledemo-afcea.192.168.99.100.nip.io
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: simpledemo
      openshift.io/deployment.name: simpledemo-1
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: anyuid
    creationTimestamp: null
    generateName: simpledemo-1-
    labels:
      app: simpledemo
      deployment: simpledemo-1
      deploymentconfig: simpledemo
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicationController
      name: simpledemo-1
      uid: 12ed57e6-4d7d-11e8-b543-0800272feb55
  spec:
    containers:
    - image: quay.io/rlucente-se-jboss/simpledemo@sha256:43d3ad96c27cbbd738704a9ce6868423468ac390885c09185d34d5a29633fff0
      imagePullPolicy: Always
      name: simpledemo
      ports:
      - containerPort: 8080
        protocol: TCP
      - containerPort: 8443
        protocol: TCP
      resources: {}
      securityContext:
        capabilities:
          drop:
          - MKNOD
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: default-token-g65cz
        readOnly: true
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: default-dockercfg-zbgf4
    nodeName: localhost
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      seLinuxOptions:
        level: s0:c10,c5
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    volumes:
    - name: default-token-g65cz
      secret:
        defaultMode: 420
        secretName: default-token-g65cz
  status:
    phase: Pending
    qosClass: BestEffort
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.completed-at: 2018-05-01 20:20:26 +0000 UTC
      openshift.io/deployer-pod.created-at: 2018-05-01 20:20:21 +0000 UTC
      openshift.io/deployer-pod.name: simpledemo-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: simpledemo
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"v1","metadata":{"name":"simpledemo","namespace":"afcea","selfLink":"/apis/apps.openshift.io/v1/namespaces/afcea/deploymentconfigs/simpledemo","uid":"12d78e7b-4d7d-11e8-b543-0800272feb55","resourceVersion":"3334","generation":2,"creationTimestamp":"2018-05-01T20:20:21Z","labels":{"app":"simpledemo"},"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"}},"spec":{"strategy":{"type":"Rolling","rollingParams":{"updatePeriodSeconds":1,"intervalS [...]
    creationTimestamp: null
    generation: 1
    labels:
      app: simpledemo
      openshift.io/deployment-config.name: simpledemo
    name: simpledemo-1
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: simpledemo
      uid: 12d78e7b-4d7d-11e8-b543-0800272feb55
  spec:
    replicas: 1
    selector:
      app: simpledemo
      deployment: simpledemo-1
      deploymentconfig: simpledemo
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: simpledemo
          openshift.io/deployment.name: simpledemo-1
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: simpledemo
          deployment: simpledemo-1
          deploymentconfig: simpledemo
      spec:
        containers:
        - image: quay.io/rlucente-se-jboss/simpledemo@sha256:43d3ad96c27cbbd738704a9ce6868423468ac390885c09185d34d5a29633fff0
          imagePullPolicy: Always
          name: simpledemo
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    replicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: simpledemo
    name: simpledemo
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      app: simpledemo
      deploymentconfig: simpledemo
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
